[package]
name = "whois-rust"
version = "1.3.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/whois-rust"
homepage = "https://magiclen.org/whois-rust"
keywords = ["whois"]
categories = ["web-programming::websocket"]
description = "This is a WHOIS client library for Rust, inspired by https://github.com/hjr265/node-whois"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
validators = "0.22"
serde_json = "1"
once_cell = "1"
regex = "1"
trust-dns-client = "0.20.3"

tokio = { version = "1", features = ["fs", "net", "time", "io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[dependencies.validators-derive]
version = "0.22"
default-features = false
features = ["host"]

[package.metadata.docs.rs]
all-features = true