[package]
name = "whois-rust"
version = "1.5.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.64"
repository = "https://github.com/magiclen/whois-rust"
homepage = "https://magiclen.org/whois-rust"
keywords = ["whois"]
categories = ["web-programming::websocket"]
description = "This is a WHOIS client library for Rust, inspired by https://github.com/hjr265/node-whois"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde_json = "1"
once_cell = "1"
regex = "1"
trust-dns-client = "0.23"

tokio = { version = "1", features = ["fs", "net", "time", "io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "host"]

[package.metadata.docs.rs]
all-features = true
